Code/ROS2_Code/roverbrain_ws/log/build_2025-07-24_07-10-14/roverbrain_pkg/stderr.log
  File "/home/rover/roverbrain_ws/install/roverbrain_pkg/lib/python3.12/site-packages/roverbrain_pkg/steering_control.py", line 22
    FR_angle = math.degrees((atan((2*0.284*sin(math.radians(target_angle)))/(2*0.284*cos(math.radians(target_angle))-0.464*sin(math.radians(target_angle)))))))
                                                                                                                                                              ^
SyntaxError: unmatched ')'

